adicionando suporte para reports json

--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -1,7 +1,8 @@
 ---
 default: -p html -p dot -p chrome
-ci: -p headless -p dot                                        #continuos integration
+ci: -p headless -p dot -p json                                        #continuos integration
 html: --format html --out=log/reports.html
+json: --format json --out=log/reports.json
 bdd: --format pretty
 dot: --format progress
 headless: BROWSER=headless                                    #executa os testes sem levantar o navegador, são executados em background
